--- a/404.html
+++ b/404.html
@@ -54,10 +54,10 @@
                     Seems you are lost, traveler.
                 </p>
                 <p>
-                    Maybe you want to look at my <a href="http://www.yidizhu.com/"> portfolio</a> or <a href="http://www.yidizhu.com/blog"> read something</a>?
+                    Maybe you want to look at my <a href="https://www.yidizhu.com/"> portfolio</a> or <a href="https://www.yidizhu.com/blog"> read something</a>?
                 </p>
                 <p>
-                    Or it would be nice to just <a href="mailto:yidiz@andrew.cmu.edu">send me an email</a>!
+                    Or it would be nice to just <a href="mailto:yidiz@alumni.cmu.edu">send me an email</a>!
                 </p>
             </div>
         </div>
