--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
                             <img src="resources/images/portfolio/game-design.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Game Design Adventures</p>
                         </a>
@@ -96,7 +96,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/the-sea.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/the-sea.html" data-toggle="modal">
                             <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
                             <p class="portfolio-title">The Sea | Solo project</p>
                         </a>
@@ -105,7 +105,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/you.html" class="portfolio-link" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/you.html" class="portfolio-link" data-toggle="modal">
                             <img src="resources/images/portfolio/you.png" class="img-responsive" alt="">
                             <p class="portfolio-title">You | Solo project</p>
                         </a>
@@ -114,7 +114,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/maestro.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/maestro.html" data-toggle="modal">
                             <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Maestro | HTC Vive</p>
                         </a>
@@ -123,7 +123,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/isetta.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/isetta.html" data-toggle="modal">
                             <img src="resources/images/portfolio/engine.jpg" class="img-responsive" alt="">
                             <p class="portfolio-title">Isetta Game Engine</p>
                         </a>
@@ -132,7 +132,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/althea.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/althea.html" data-toggle="modal">
                             <img src="resources/images/portfolio/tree.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Althea | Co-op VR</p>
                         </a>
@@ -141,7 +141,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/autistic.html" data-toggle="modal">
                             <img src="resources/images/portfolio/prism-title.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Prism | Autism Awareness</p>
                         </a>
@@ -150,7 +150,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/carrot.html" class="portfolio-link"
+                        <a href="https://www.yidizhu.com/articles/carrot.html" class="portfolio-link"
                             data-toggle="modal">
                             <img src="resources/images/portfolio/carrot.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Eat My Carrot! | GGJ 2018</p>
@@ -160,7 +160,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/ripple-blossom.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/ripple-blossom.html" data-toggle="modal">
                             <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Ripple Blossom | Indie game</p>
                         </a>
@@ -170,7 +170,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group all">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link"
+                        <a href="https://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link"
                             data-toggle="modal">
                             <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
                             <p class="portfolio-title">You're Fired | Omni + Oculus</p>
@@ -180,7 +180,7 @@
 
                 <!-- <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
+                        <a href="https://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
                             <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                             <p class="portfolio-title">YiCon | Serious game</p>
                         </a>
@@ -189,7 +189,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                     <div class="portfolio-item">
-                        <a href="http://www.yidizhu.com/articles/sound-bearier.html" class="portfolio-link"
+                        <a href="https://www.yidizhu.com/articles/sound-bearier.html" class="portfolio-link"
                             data-toggle="modal">
                             <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                             <p class="portfolio-title">The Sound Bearier | HoloLens</p>
