--- a/resources/header.html
+++ b/resources/header.html
@@ -4,7 +4,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="http://www.yidizhu.com">Yidi Zhu</a>
+        <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -13,16 +13,16 @@
                 <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-                <a href="http://www.yidizhu.com">Home</a>
+                <a href="https://www.yidizhu.com">Home</a>
             </li>
             <li class="page-scroll">
-                <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                <a href="https://www.yidizhu.com/blog.html">Blog</a>
             </li>
             <li class="page-scroll">
-                <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
+                <a href="https://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
             </li>
             <!-- <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/about.html">About</a>
+                    <a href="https://www.yidizhu.com/about.html">About</a>
                 </li> -->
             <!--
                 <li class="page-scroll">
