--- a/resources/footer.html
+++ b/resources/footer.html
@@ -8,18 +8,6 @@
                         <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
                                 class="fa fa-envelope"></i></a>
                     </li>
-                    <li>
-                        <a href="https://github.com/zhuyidiwow" class="btn-social btn-outline"><i class="fa fa-github"
-                                aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
-                                class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
-                                class="fa fa-fw fa-twitter"></i></a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -29,8 +17,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                Copyright &copy; Yidi Zhu 2019. Re-designed from <a
-                    href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>.
+                Copyright &copy; Yidi Zhu 2019-2026. Re-designed from <a
+                    href="https://github.com/StartBootstrap/startbootstrap-freelancer?tab=readme-ov-file">Freelancer Theme</a>.
             </div>
         </div>
     </div>
