--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
             </div>
             <div class="row">
 
+
+                <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current">
+                    <div class="portfolio-item">
+                        <a href="https://www.apple.com/os/visionos/" class="portfolio-link"
+                            data-toggle="modal">
+                            <img src="resources/images/portfolio/visionos-home.jpg" class="img-responsive" alt="">
+                            <p class="portfolio-title">visionOS UI Rendering Engine</p>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
+                    <div class="portfolio-item">
+                        <a href="https://www.yidiz.com" class="portfolio-link"
+                            data-toggle="modal">
+                            <img src="resources/images/portfolio/web-sketches.png" class="img-responsive" alt="">
+                            <p class="portfolio-title">Web Sketches</p>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
                         <a href="https://www.yidizhu.com/articles/game-design.html" data-toggle="modal">
@@ -178,15 +199,6 @@
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
-                    <div class="portfolio-item">
-                        <a href="https://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
-                            <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
-                            <p class="portfolio-title">YiCon | Serious game</p>
-                        </a>
-                    </div>
-                </div> -->
-
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper group">
                     <div class="portfolio-item">
                         <a href="https://www.yidizhu.com/articles/sound-bearier.html" class="portfolio-link"
@@ -197,10 +209,12 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper current">
+                <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <img src="https://dummyimage.com/900x563/ffffff/ffffff.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">A Full-time Job...</p>
+                        <a href="https://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
+                            <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
+                            <p class="portfolio-title">YiCon | Serious game</p>
+                        </a>
                     </div>
                 </div>
             </div>
