--- a/resources/header.html
+++ b/resources/header.html
@@ -18,9 +18,9 @@
             <li class="page-scroll">
                 <a href="https://www.yidizhu.com/blog.html">Blog</a>
             </li>
-            <li class="page-scroll">
+            <!-- <li class="page-scroll">
                 <a href="https://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
-            </li>
+            </li> -->
             <!-- <li class="page-scroll">
                     <a href="https://www.yidizhu.com/about.html">About</a>
                 </li> -->
