--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper solo">
                     <div class="portfolio-item">
-                        <a href="https://www.yidiz.com" class="portfolio-link"
+                        <a href="https://yidiz.com" class="portfolio-link"
                             data-toggle="modal">
                             <img src="resources/images/portfolio/web-sketches.png" class="img-responsive" alt="">
                             <p class="portfolio-title">Web Sketches</p>
